--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
     </div>
 
     <div class="movie">
-      <img src="https://image.tmdb.org/t/p/w500/jYtNUfMbU6DBbmd4LUS19u4hF4p.jpg" alt="">
+      <!-- <img src="https://image.tmdb.org/t/p/w500/jYtNUfMbU6DBbmd4LUS19u4hF4p.jpg" alt="">
       <div>
         <h2>Os Caça-Fantasmas</h2>
         <p>
           Em Nova York Peter Venkman, Ray Stantz e Egon Spengler são três cientistas do departamento de psicologia da Columbia University, que se dedicam ao estudo de casos paranormais. Quando a subvenção termina eles são despedidos e Venkman sugere que abram um negócio próprio, a exterminadora de fantasmas Ghostbusters. Inicialmente eles só têm despesas e nenhum cliente, mas eis que surge Dana Barrett, uma violoncelista que teve uma experiência assustadora em seu apartamento.
         </p>
-      </div>
+      </div> -->
     </div>
 
     <div class="find-movie">
-      <button> <img src="assets/img/shuffle.svg" alt=""> Encontrar filme</button>
+      <button class="encontrar-filme"> <img src="assets/img/shuffle.svg" alt=""> Encontrar filme</button>
       <p>Clique em "Encontrar filme" que traremos informações
         de algum filme para você assistir hoje.</p>
     </div>
   </main>
+
+  <script src="assets/javascript/main.js"></script>
 </body>
 
 </html>
