--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="movie">
-      <!-- <img src="https://image.tmdb.org/t/p/w500/jYtNUfMbU6DBbmd4LUS19u4hF4p.jpg" alt="">
+      <!-- <img class"movie-image" src="https://image.tmdb.org/t/p/w500/jYtNUfMbU6DBbmd4LUS19u4hF4p.jpg" alt="">
       <div>
         <h2>Os Caça-Fantasmas</h2>
         <p>
